testsuite/tests/rename/should_fail/mc13.stderr

mc13.hs:12:37: error: Variable not in scope: f :: [a] -> m0 a
